%Переписано на boot